second comit for assignment 5 & 6

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--
+  Submitted by Bilal Mohammed(C0882358)  
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +11,9 @@
 </head>
 <body>
     <script src="index.js"></script>
+    <h1>Js Assignment 5 and 6</h1>
+    <p>Submitted by Bilal Mohammed(C0882358)</p>
+    <p>To view output please open the console in chrome browser.</p>
 </body>
 </html>
 
