--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <title>Assignment 5 & 6</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    
     <h1>Js Assignment 5 and 6</h1>
     <p>Submitted by Bilal Mohammed(C0882358)</p>
-    <p>To view output please open the console in chrome browser.</p>
+    <div id ="resultsContainer">
+      
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
 
